<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="key_label">Key:</string>
    <string name="app_name">Phonstrument</string>
    <string name="action_settings">Settings</string>
     <string name="menu_rate_app">Rate this app</string>
    <string name="menu_help">Help</string>
    <string name="menu_tell_friend">Tell a friend</string>
     <string name="toggle_on_off">On/Off</string>
    <string name="chord_label">Chords:</string>
    <string name="chord_I_label">I</string>
    <string name="chord_ii_label">ii</string>
    <string name="chord_iii_label">iii</string>
    <string name="chord_IV_label">IV</string>
    <string name="chord_V_label">V</string>
    <string name="chord_vi_label">vi</string>
    <string name="chord_vii_label">vii</string>
    <string name="filter_label">Filter</string>
    <string name="filter_attack_label">Attack</string>
    <string name="filter_decay_label">Decay</string>
    <string name="filter_range_label">Range</string>
    <string name="filter_freq_label">Freq</string>
    <string name="amp_label">Amp</string>
    <string name="amp_attack_label">AmpAtt</string>
    <string name="amp_decay_label">AmpDec</string>
    <string name="synth1_label">Synth 1</string>
    <string name="synth2_label">Synth 2</string>
    <string name="drum1_label">Kick</string>
    <string name="drum2_label">Snare</string>
    <string name="drum3_label">Ohh</string>
    <string name="drum4_label">Chh</string>
    <string name="tempo_label">Tempo</string>
    <string name="numbars_label">Bars</string>
    <string name="numbeats_label">Beats</string>
    <string name="numpulses_label">Pulses</string>
    <string name="share_loop">Export</string>
    <string name="read_array">Test read</string>
    <string name="new_project">New</string>
    <string name="open_project">Open</string>



    <string-array name="key_list">
        <item>C</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>

</resources>