<menu xmlns:android="http://schemas.android.com/apk/res/android" >

     <item
        android:id="@+id/toggle_on_off"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/toggle_on_off"/>
    
    <item
        android:id="@+id/menu_rate_app"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_rate_app"/>
    <item
        android:id="@+id/menu_tell_friend"
        android:orderInCategory="100"
        android:showAsAction="ifRoom"
        android:title="@string/menu_tell_friend"/>

    <item
        android:id="@+id/share_loop"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/share_loop"/>

    <item
        android:id="@+id/test_array"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/read_array"/>

</menu>